--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,6 +1,6 @@
 #signup-dialog {
     height: 350px;
-    width: 400px;
+    /*width: 400px;*/
 }
 
 md-dialog.md-default-theme {
@@ -21,7 +21,7 @@ md-input-container{
 }
 
 #signup-dialog-container{
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-flow: column;
     justify-content: space-between; /* align horizontal */
